force-app/main/default/objects/Academic_Interest__c/Academic_Interest__c.object-meta.xml
<CustomObject>
    <description>General interests from GRE, Hobsons, NNE, California Diversity</description>
    <label>Academic Interest</label>
    <nameField>
        <label>Academic Interest Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Academic Interests</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>