force-app/main/default/objects/Academic_Interest__c/fields/Academic_Interest_Status__c.field-meta.xml
<CustomField>
    <fullName>Academic_Interest_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <description>[manual import] - Checkbox that shows Academic Interest</description>
    <label>Status</label>
    <type>Checkbox</type>
</CustomField>