force-app/main/default/objects/Academic_Interest__c/fields/GRE_Code__c.field-meta.xml
<CustomField>
    <fullName>GRE_Code__c</fullName>
    <description>[manual import] - GRE code</description>
    <externalId>true</externalId>
    <label>GRE Code</label>
    <length>4</length>
    <type>Text</type>
</CustomField>