force-app/main/default/objects/Academic_Interest__c/fields/Interest_Code__c.field-meta.xml
<CustomField>
    <fullName>Interest_Code__c</fullName>
    <description>[manual import] - Abbreviated code for academic interest name</description>
    <label>Interest Code</label>
    <length>15</length>
    <type>Text</type>
</CustomField>