force-app/main/default/objects/Academic_Interest__c/listViews/All_Academic_Interests.listView-meta.xml
<ListView>
    <fullName>All_Academic_Interests</fullName>
    <columns>NAME</columns>
    <columns>GRE_Code__c</columns>
    <columns>Interest_Code__c</columns>
    <columns>Academic_Interest_Status__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Academic Interests</label>
</ListView>