force-app/main/default/objects/Academic_Interest__c/listViews/Health_Academic_Interests.listView-meta.xml
<ListView>
    <fullName>Health_Academic_Interests</fullName>
    <columns>NAME</columns>
    <columns>GRE_Code__c</columns>
    <columns>Interest_Code__c</columns>
    <columns>Academic_Interest_Status__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>health</value>
    </filters>
    <label>Health Academic Interests</label>
    <sharedTo />
</ListView>